--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="CSE.html">COMPUTER SCIENCE AND ENGINEERING</a></h1>
+      <h1 class="logo mr-auto"><a href="index.html">COMPUTER SCIENCE AND ENGINEERING</a></h1>
      
 
        <nav class="nav-menu d-none d-lg-block">
@@ -64,7 +64,7 @@
         	<div class="row" data-aos="zoom-in" data-aos-delay="100">
 			<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
 			<div class="member">
-					<img src="img/cse/award1-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
+					<img src="cse/award1-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
 				<p>
 					<b>Sairam - Computer Science Engineering department</b>
 					 is organized a Webinar (Alumni Talk) on "Bridging the gap between Engineering and Design" 
@@ -75,7 +75,7 @@
 			</div>
 		<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
 			<div class="member">
-				<img src="img/cse/award2-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
+				<img src="cse/award2-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
 					<p><b>Sairam - Computer Science Engineering department</b>
 						 is organized a Webinar (Alumni Talk) on " Building a Career in Cyber security" 
 						<b>Dr. S. SATHYACHANDRAN </b>, Senior Security Engineer- Customer Trust NetFlix, Mountain View, California,
@@ -86,7 +86,7 @@
 
 	<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
 		<div class="member">
-		<img src="img/cse/award3-img1.jpeg"  class="img-fluid" alt="" style="height:300px;width:300px">
+		<img src="cse/award3-img1.jpeg"  class="img-fluid" alt="" style="height:300px;width:300px">
 
 		<p><b>Ms. Nisha</b> <b>G Mathur</b>
 			 - IV Year of Sairam - Computer Science Engineering won 2nd Position with a cash prize of Rs.10,000 
@@ -99,7 +99,7 @@
 
 	<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
 		<div class="member">
-			<img src="img/cse/award4-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
+			<img src="cse/award4-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
 			<p>Our 2nd year students <b>Ms. Monisha, Ms. Harini and Ms. Varsha</b> got selected for the Talentsprint Women Engineer 2020 under
 		 	Cohort Internship Program supported by Google and received their 1st payment of stipend Rs.40,000 from Google individually.
 			</p>
@@ -107,7 +107,7 @@
  	</div>
 	<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
 		<div class="member">
-			<img src="img/cse/award5-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
+			<img src="cse/award5-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
 			<p>We the <b>Sairam - Computer Science Engineering department </b>congratulate our student
 			<b> Ms.Sahlini Devi S</b> 2020 Passed out <b>TCS Placed "PEGA CERTIFIED PROFESSIONAL" </b>
 			on successful completion of TCS Xploreassessment (ION PROCTORED ASSESSMENT) with a score of 80 Plus!
@@ -116,7 +116,7 @@
 	</div>
 	<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
 		<div class="member">
-			<img src="img/cse/award6-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
+			<img src="cse/award6-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
 			<p>
 			Our second year students <b>Yogeswaran and Arvindbala</b> participated in a special <b>Tamil debate</b> as a part of Independence day celebrations organized by 
 			<b>Unnath Bharath Abhiyan (UBA)</b> 
@@ -126,7 +126,7 @@
 	</div>
 	<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
 		<div class="member">
-			<img src="img/cse/award7-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
+			<img src="cse/award7-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
 			<p>
 			We Department of <b>Computer Science and Engineering</b>, 
 			<b>Sri Sairam Engineering College</b> congratulate our student <b>MAHESWARI M </b>(2020 batch) for joining <b>PEGA</b> talent force. 
@@ -136,7 +136,7 @@
 
 	<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
 		<div class="member">
-			<img src="img/cse/award8-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
+			<img src="cse/award8-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
 			<p>
 			Our department 2020 batch <b>Nisha G. Mathur</b> got the 2nd place in the inter college singing competition
 			</p>
@@ -146,7 +146,7 @@
 
 	<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
 		<div class="member">
-			<img src="img/cse/award9-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
+			<img src="cse/award9-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
 			<p>
 			<b>Rotaract Club of Sri Sairam Engineering College (sponsored by Rotary Club of Madras, Porur)</b>
 			 organizing Teacher's Day program on " வேருக்கு நீர் " (A day to thank our pillars) 
@@ -156,7 +156,7 @@
 	</div>
 	<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
 		<div class="member">
-			<img src="img/cse/award10-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
+			<img src="cse/award10-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
 			<p>We the Department of <b>Computer Science and Engineering,Sri Sairam Engineering College</b> congratulate our Final year (2017-2021 Batch) 
 			students<b> Mr. Bhuvanesh S and Ms. Kamali S.U (Pega certified Students)</b>
 		 	for getting placed in <b>SERENDEBYTE </b>with an annual compensation of Rs. 4 Lakhs to 5 Lakhs..
@@ -165,7 +165,7 @@
 	</div>
 	<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
 		<div class="member">
-			<img src="img/cse/award11-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
+			<img src="cse/award11-img1.jpeg" class="img-fluid" alt="" style="height:300px;width:300px">
 			<p>
 			We the <b>Sairam - Computer Science Engineering</b> is feeling happy to congratulate our 
 			2017-2021batch student <b>Mr. E. Vasanth Kumar</b> for getting placed in <b>Kaar Technologies </b>campus drive with a compensation of Rs.6.50 L.P.A
