--- a/index.html
+++ b/index.html
@@ -37,12 +37,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html">COMPUTER SCIENCE AND ENGINEERING</a></h1>
-     
-
-       <nav class="nav-menu d-none d-lg-block">
-        </ul>
-      </nav><!-- .nav-menu -->
+      <h1 class="logo mr-auto"><a href="index.html">DEPARTMENT OF COMPUTER SCIENCE AND ENGINEERING SSEC</a></h1>
 
     </div>
   </header><!-- End Header -->
