--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html">DEPARTMENT OF COMPUTER SCIENCE AND ENGINEERING SEC</a></h1>
+      <h1 class="logo mr-auto"><a href="index.html">DEPARTMENT OF CSE - SEC</a></h1>
 
     </div>
   </header><!-- End Header -->
